# werckmeister-vst

./: .gitignore  CMakeLists.txt  CompiledSheet.h  Compiler.cpp  Compiler.h  FileWatcher.cpp  FileWatcher.hpp  FilterComponent.cpp  FilterComponent.h  ILogger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginStateData.cpp  PluginStateData.h  Preferences.cpp  Preferences.h  PreferencesData.cpp  PreferencesData.h  README.md  UdpSender.cpp  UdpSender.hpp
.github/workflows/: ccpp-linux.yml  ccpp-macos.yml  ccpp-win.yml
cmake/: FileEmbed.cmake
ext/vstsdk2.4/: index.html
ext/vstsdk2.4/doc/: sdk.menu.html  sdk.overview.html
ext/vstsdk2.4/doc/html/: __new__audioeffectx_8cpp.html  _h_1_2newbase_2public_8sdk_2source_2vst2_8x_2audioeffectx_8cpp-example.html  aeffect_8h.html  aeffectx_8h.html  aeffeditor_8h.html  annotated.html  audioeffect_8cpp.html  audioeffect_8h.html  audioeffectx_8cpp.html  audioeffectx_8h.html  class_a_eff_editor-members.html  class_a_eff_editor.html  class_audio_effect-members.html  class_audio_effect.html  class_audio_effect_x-members.html  class_audio_effect_x.html  deprecated.html  dir_H_3A_2Fnewbase_2Fpluginterfaces_2F.html  dir_H_3A_2Fnewbase_2Fpluginterfaces_2Fvst2_2Ex_2F.html  dir_H_3A_2Fnewbase_2Fpublic_2Esdk_2Fsource_2F.html  dir_H_3A_2Fnewbase_2Fpublic_2Esdk_2Fsource_2Fvst2_2Ex_2F.html  dirs.html  doc_8h.html  examples.html  files.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6b.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  (+107 more)
ext/vstsdk2.4/pluginterfaces/vst2.x/: aeffect.h  aeffectx.h
ext/vstsdk2.4/public.sdk/samples/vst2.x/adelay/: adelay.cpp  adelay.h  adelaymain.cpp  surrounddelay.cpp  surrounddelay.h
ext/vstsdk2.4/public.sdk/samples/vst2.x/adelay/editor/: sdeditor.cpp  sdeditor.h
ext/vstsdk2.4/public.sdk/samples/vst2.x/again/source/: again.cpp  again.h
ext/vstsdk2.4/public.sdk/samples/vst2.x/mac/vst 2.4 examples.xcodeproj/: project.pbxproj
ext/vstsdk2.4/public.sdk/samples/vst2.x/minihost/source/: minieditor.cpp  minihost.cpp
ext/vstsdk2.4/public.sdk/samples/vst2.x/vstxsynth/resource/: vstxsynth.vstxml
ext/vstsdk2.4/public.sdk/samples/vst2.x/vstxsynth/source/: gmnames.h  vstxsynth.cpp  vstxsynth.h  vstxsynthproc.cpp
ext/vstsdk2.4/public.sdk/source/vst2.x/: audioeffect.cpp  audioeffectx.cpp  audioeffectx.h  vstplugmain.cpp
ext/vstsdk2.4/vstgui.sf/drawtest/source/: pdrawtesteditor.cpp  pdrawtesteditor.h
ext/vstsdk2.4/vstgui.sf/drawtest/win/: drawtest.vcproj
ext/vstsdk2.4/vstgui.sf/vstgui/: cfileselector.cpp  vstcontrols.cpp  vstcontrols.h  vstgui.cpp
ext/vstsdk2.4/vstgui.sf/vstgui/Documentation/html/: annotated.html  class_c_reference_counter.html  class_c_splash_screen-members.html  class_c_splash_screen.html  class_c_view.html  class_plugin_g_u_i_editor.html  functions_0x63.html  functions_0x64.html  functions_0x67.html  functions_0x6d.html  functions_0x73.html  functions_0x75.html  functions_func_0x63.html  functions_func_0x64.html  functions_func_0x67.html  functions_func_0x6d.html  functions_func_0x75.html  functions_vars_0x73.html  hierarchy.html  tree.html  vstcontrols_8cpp.html
